Fix bad formatting when cards wrap to new line

--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -9,6 +9,7 @@
     &__card {
         width: 285px;
         min-width: 265px;
+        margin: 50px 10px;
         padding: 65px 40px;
         background-color: #fff;
         border-top: 8px solid var(--color-pink);
